# autoware_universe_self_testing

common/autoware_self_test_infrastructure/: CMakeLists.txt  package.xml
common/autoware_self_test_infrastructure/include/autoware_self_test_infrastructure/: i_tester_component.hpp  self_test_controller.hpp  self_test_infrastructure.hpp  self_test_registry.hpp  self_test_service.hpp
common/autoware_self_test_infrastructure/include/autoware_self_test_infrastructure/test_run_pipeline/: evaluator.hpp  reporter.hpp  test_executor.hpp
common/autoware_self_test_infrastructure/src/: self_test_controller.cpp  self_test_infrastructure.cpp  self_test_registry.cpp  self_test_service.cpp
common/autoware_self_test_infrastructure/src/test_run_pipeline/: evaluator.cpp  reporter.cpp  test_executor.cpp
common/autoware_self_test_infrastructure/test/: test_evaluator.cpp  test_reporter.cpp  test_self_test_controller.cpp  test_self_test_registry.cpp  test_test_executor.cpp
common/autoware_self_test_types/: CMakeLists.txt  package.xml
common/autoware_self_test_types/include/autoware_self_test_types/: evaluation_result.hpp  test_case.hpp  test_result.hpp  test_run.hpp  test_run_result.hpp  types.hpp
common/autoware_self_test_types/test/: test_types.cpp
control/autoware_lane_departure_checker/src/lane_departure_checker_node/: lane_departure_checker_node.cpp
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/: CMakeLists.txt  package.xml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/config/: detection_area.param.yaml
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/src/: manager.cpp  manager.hpp  scene.cpp  scene.hpp
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/src/self_test/: detection_area_snapshot.hpp  i_detection_area_testable.hpp  tester_component.cpp  tester_component.hpp
planning/behavior_velocity_planner/autoware_behavior_velocity_detection_area_module/test/: test_detection_area_testable_smoke.cpp  test_tester_component.cpp
