<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_self_test_infrastructure</name>
  <version>0.0.0</version>
  <description>Self-test infrastructure for autoware.</description>
  <maintainer email="jonathan@lipps.de">Jonathan Lippss</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autoware_self_test_types</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
